traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:6: error: not enough arguments for method bougerPos: (cpt: Int)Unit.
Unspecified value parameter cpt.
      bougerPos()
               ^TraversalZigZag:25: error: reassignment to val
       cpt=cpt+7
          ^TraversalZigZag:36: error: value += is not a member of Int
    a +=1;
      ^