traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
		var cpt:Int =0
  	var toucherMur:Boolean=false
    ecritMessage(cpt) 
    while(finalPos!=true){
      
      bougerPos()
      cpt+=1;
      ecritMessage(cpt);
    }
  }

  def finalPos():Boolean={
    if(getX()==(getMondeLargeur-1) && getY()==(getMondeHauteur-1)){
      return true
    }
    else{
      return false
    }
  }
  def bougerPos(cpt:Int){
     if(getX()==(getMondeLargeur-1)){
       setPos(getX(),getY()+1)
       ecritMessage(cpt+1)
       bougerinverse(cpt+1)
       cpt=cpt+7
     }
    
    setPos(getX()+1,getY())
    
   
  }
def bougerinverse(a:Int){
  for(k<-1 to 7){
    setPos(getX()-1,getY())
    ecritMessage(a+1)
    a +=1;
  }
  setPos(getX(),getY()+1)
  ecritMessage(a)
}
